Fix libssl error RAC1170

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -60,3 +60,10 @@
   file:
     path: /opt/dell/srvadmin/sbin/racadm-wrapper-idrac7
     mode: 0755
+
+## Fix RAC1170 error
+- name: Fix libssl error RAC1170
+  file:
+    src: "/usr/lib/x86_64-linux-gnu/libssl.so.1.0.2"
+    dest: "/opt/dell/srvadmin/lib64/libssl.so"
+    state: link
