Set the correct issue url

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,7 +7,7 @@ galaxy_info:
   description: "Setup Openmanage"
   license: WTFPL
   company: IPR
-  issue_tracker_url: https://git.ipr.univ-rennes1.fr/cellinfo/ansible.netadata/issues
+  issue_tracker_url: https://git.ipr.univ-rennes1.fr/cellinfo/ansible.openmanage/issues
   min_ansible_version: 2.6
   platforms:
   - name: Debian
