--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -69,6 +69,7 @@ openmanage__install_recommends: False
 #
 openmanage__dep_packages:
   - 'libargtable2-0'
+  - 'libxslt1.1'
                                                                        # ]]]
 # .. envvar:: openmanage__base_packages [[[
 #
