Small fix: correct role name in task file

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # .. vim: foldmarker=[[[,]]]:foldmethod=marker
 #
-# tasks file for netdata
+# tasks file for openmanage
 
 # Manage repository [[[1
 ## Add repository
