--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,6 +23,15 @@ openmanage__repositories:
     state:         '{{ openmanage__deploy_state
                        if (ansible_distribution_release in ["stretch", "xenial"])
                        else "absent" }}'
+  # Version 910 - for OS Debian-Buster : Force using Stretch Repo as buster repo is not existing
+  - repo:          'deb http://linux.dell.com/repo/community/openmanage/910/stretch stretch main'
+    mode:          '0644'
+    filename:      'dell.openmanage'
+    key_id:        '1285491434D8786F'
+    key_keyserver: 'pool.sks-keyservers.net'
+    state:         '{{ openmanage__deploy_state
+                       if (ansible_distribution_release in ["buster"])
+                       else "absent" }}'
   # Previous version for Debian until Jessie and Ubuntu until Trusty
   - repo:          'deb http://linux.dell.com/repo/community/debian/dists/{{ ansible_distribution_release }} {{ ansible_distribution_release }} openmanage'
     mode:          '0644'
@@ -30,7 +39,7 @@ openmanage__repositories:
     key_id:        '1285491434D8786F'
     key_keyserver: 'pool.sks-keyservers.net'
     state:         '{{ openmanage__deploy_state
-                       if (ansible_distribution_release not in ["stretch", "xenial"])
+                       if (ansible_distribution_release not in ["buster","stretch", "xenial"])
                        else "absent" }}'
                                                                        # ]]]
                                                                    # ]]]
