--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,16 +56,16 @@
   until: pkg_dep_result is success
   when: (openmanage__deploy_state == "present")
 
-## Manage SSL packages
-- name: Ensure SSL required packages are present
+## Manage Debian Stretch (or Ubuntu Xenial) specific packages
+- name: "Ensure 910 specific packages (Stretch|Xenial) are in there desired state"
   package:
     name: '{{ item }}'
     state: "present"
     install_recommends: '{{ openmanage__install_recommends | bool }}'
   with_flattened:
-    - '{{ openmanage__ssl_packages | to_nice_json }}'
-  register: pkg_ssl_result
-  until: pkg_ssl_result is success
+    - '{{ openmanage__stretch_packages | to_nice_json }}'
+  register: pkg_stretch_result
+  until: pkg_stretch_result is success
   when: (openmanage__deploy_state == "present" and
         ( (ansible_distribution == "Debian" and ansible_distribution_major_version is version("9", "<=")) or
           (ansible_distribution == "Ubuntu" and ansible_distribution_version is version("16.04", "<="))))
