--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,7 +14,18 @@
 # apt_repository and apt_key.
 #
 openmanage__repositories:
-  # Version 10100 - for Debian Bullseye and Ubuntu Focal
+  # Version 10100 - for Debian Bookworm and Ubuntu Jammy [[[
+  # Force using Focal repo as Bookworm repo doesn't exist and Jammy is based on Debian Bookworm
+  - repo:          'deb http://linux.dell.com/repo/community/openmanage/11000/jammy jammy main'
+    mode:          '0644'
+    filename:      'dell.openmanage'
+    key_id:        '1285491434D8786F'
+    key_url:       'https://linux.dell.com/repo/pgp_pubkeys/0x1285491434D8786F.asc'
+    state:         '{{ openmanage__deploy_state
+                       if (ansible_distribution_release in ["bookworm", "jammy"])
+                       else "absent" }}'
+  # ]]]
+  # Version 10100 - for Debian Bullseye and Ubuntu Focal [[[
   # Force using Focal repo as Bullseye repo doesn't exist and Focal is based on Debian Bullseye
   - repo:          'deb http://linux.dell.com/repo/community/openmanage/10100/focal focal main'
     mode:          '0644'
@@ -24,7 +35,8 @@ openmanage__repositories:
     state:         '{{ openmanage__deploy_state
                        if (ansible_distribution_release in ["bullseye", "focal"])
                        else "absent" }}'
-  # Version 940 - for Debian Buster and Ubuntu Bionic
+  # ]]]
+  # Version 940 - for Debian Buster and Ubuntu Bionic [[[
   # Force using Bionic repo as Buster repo doesn't exist and Bionic is based on Debian Buster
   - repo:          'deb http://linux.dell.com/repo/community/openmanage/940/bionic bionic main'
     mode:          '0644'
@@ -34,7 +46,8 @@ openmanage__repositories:
     state:         '{{ openmanage__deploy_state
                        if (ansible_distribution_release in ["buster", "bionic"])
                        else "absent" }}'
-  # Version 910 - for Debian Stretch and Ubuntu Xenial
+  # ]]]
+  # Version 910 - for Debian Stretch and Ubuntu Xenial [[[
   - repo:          'deb http://linux.dell.com/repo/community/openmanage/910/{{ ansible_distribution_release }} {{ ansible_distribution_release }} main'
     mode:          '0644'
     filename:      'dell.openmanage'
@@ -43,7 +56,8 @@ openmanage__repositories:
     state:         '{{ openmanage__deploy_state
                        if (ansible_distribution_release in ["stretch", "xenial"])
                        else "absent" }}'
-  # Previous OpenManage version for Debian until Jessie and Ubuntu until Trusty
+  # ]]]
+  # Previous OpenManage version for Debian until Jessie and Ubuntu until Trusty [[[
   - repo:          'deb http://linux.dell.com/repo/community/debian/dists/{{ ansible_distribution_release }} {{ ansible_distribution_release }} openmanage'
     mode:          '0644'
     filename:      'dell.openmanage'
@@ -53,6 +67,7 @@ openmanage__repositories:
                        if ((ansible_distribution == "Debian" and ansible_distribution_major_version is version("8", "<=")) or
                            (ansible_distribution == "Ubuntu" and ansible_distribution_version is version("14.04", "<=")))
                        else "absent" }}'
+  # ]]]
                                                                        # ]]]
                                                                    # ]]]
 # Installation and Packages [[[
